# MengerSponge

./: .gitignore  CMakeLists.txt
assets/shaders/d3d11/: basic.hlsl  menger_sponge.hlsl
assets/shaders/opengl/: basic.frag.glsl  basic.vert.glsl  menger_sponge.frag.glsl  menger_sponge.vert.glsl
src/: app.cpp  app.hpp  main.cpp
